<resources>
    <string name="app_name">Forget Helper</string>
    <string name="locations">Locations</string>
    <string name="search">Search</string>
    <string name="cloud">Cloud</string>
    <string name="exit">Exit</string>
    <string name="add_location_button_description">Add Location button</string>
    <string name="add_location">Add Location</string>
    <string name="sections">Sections</string>
    <string name="add_section">Add Section</string>
    <string name="items">Items</string>
    <string name="add_item">Add Item</string>
    <string name="update_item">Update Item</string>
    <string name="delete_item">Delete Item</string>
    <string name="individual_item_location">Location</string>
    <string name="individual_item_section">Section</string>
    <string name="individual_item_description">Description</string>
    <string name="update_location">Update Location</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="return_button">Return</string>
    <string name="add_button">Add</string>
    <string name="add_section_success_message">A section is added successfully!</string>
    <string name="add_location_success_message">A location is added successfully!</string>
    <string name="add_item_success_message">An item is added successfully!</string>
    <string name="update">Update</string>
    <string name="update_location_guide">Enter a new location name</string>
    <string name="update_section_guide">Enter a new section name</string>
    <string name="update_section">Update section</string>
    <string name="logout_text">Logout</string>
    <string name="enter_email_instruction">Enter Email</string>
    <string name="enter_password_instruction">Enter Password</string>
    <string name="reenter_password_instruction">Re-enter Password</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="ask_register_text">Don\'t have an account?</string>
    <string name="ask_login_text">Already have an account?</string>
    <string name="wrong_email_format_message">Email format is incorrect!</string>
    <string name="wrong_authentication_message">Email and / or password is incorrect!</string>
    <string name="password_not_match_message">Password and re-entered password are different!</string>
    <string name="require_empty_field">Please fill all the fields</string>
    <string name="registration_success_message">Registration succeeded!</string>
    <string name="share">share</string>
    <string name="delete_confirmation_message">Would you really like to delete this item?</string>
    <string name="delete_item_title">Delete an Item</string>
    <string name="share_title_message">Share with friends</string>
    <string name="add_section_button_description">Add Section Button</string>
    <string name="item_s_name">Item\'s name</string>
    <string name="note_your_import_id">Note your import ID!</string>
    <string name="export">Export</string>
    <string name="import_text">Import</string>
    <string name="enter_your_import_id">Enter your import ID</string>
    <string name="delete_location_dialog_title">Delete a Location</string>
    <string name="delete_location_dialog_message">Would you really like to delete this location?</string>
    <string name="delete_section_dialog_title">Delete a Section</string>
    <string name="delete_section_dialog_message">Would you really like to delete this section?</string>
</resources>

