<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailItemActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/item_detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:title="gwk"
        android:elevation="4dp"
        android:theme="@style/Theme.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/individual_item_location"
        style="@style/IndItemTitleText"
        app:layout_constraintTop_toBottomOf="@id/item_detail_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp" />

    <TextView
        android:id="@+id/item_detail_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_location"
        app:layout_constraintTop_toBottomOf="@id/tv_location"
        style="@style/LargeBlackText"
        android:layout_marginTop="15dp"
        android:text="Location" />

    <TextView
        android:id="@+id/tv_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/individual_item_section"
        style="@style/IndItemTitleText"
        app:layout_constraintStart_toStartOf="@id/item_detail_location"
        app:layout_constraintTop_toBottomOf="@id/item_detail_location"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/item_detail_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_section"
        app:layout_constraintTop_toBottomOf="@id/tv_section"
        android:layout_marginTop="15dp"
        style="@style/LargeBlackText"
        android:text="Section" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/individual_item_description"
        style="@style/IndItemTitleText"
        app:layout_constraintStart_toStartOf="@id/tv_location"
        app:layout_constraintTop_toBottomOf="@id/item_detail_section"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/item_detail_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_location"
        app:layout_constraintTop_toBottomOf="@id/tv_description"
        android:layout_marginTop="15dp"
        style="@style/LargeBlackText"
        android:maxLines="7"
        android:text="Description"
        />

</androidx.constraintlayout.widget.ConstraintLayout>